[package]
name = "tulipv2-sdk-common"
version = "0.9.0"
edition = "2021"
authors = ["Tulip Protocol"]
description = "common types, traits, and helper functions used by the v2 sdk"
keywords = ["solana", "anchor", "tulip-protocol"]

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
spl-token = "3.2.0"
arrform = {git = "https://github.com/sol-farm/arrform.git", rev = "fdbb0cfe18eadbff99cc8cd63f1b5a43df70e665"}
uint = "0.8"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
static-pubkey = "1.0.2"
tulipv2-sdk-farms = {path = "../farms"}