[package]
name = "tulipv2-sdk-common"
version = "0.9.17"
edition = "2021"
authors = ["Tulip Protocol"]
description = "common types, traits, and helper functions used by the v2 sdk"
keywords = ["solana", "anchor", "tulip-protocol"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/tulipv2-sdk-common"
readme = "../README.md"

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = "3.2.0"
tulip-arrform = "0.1.1"
uint = "0.8"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
static-pubkey = "1.0.3"
tulipv2-sdk-farms = {path = "../farms", version = "0.9.16"}
arrayref = "0.3.6"
bytemuck = "1.7.2"
solana-program = "1.9.13"
so-defi-utils = "0.1.0"
spl-associated-token-account = "1.0.3"
sighashdb = "0.1.28"
[dev-dependencies]
anchor-client = "0.24.2"

[features]
default = ["usdc-optimizer", "usdt-optimizer", "sol-optimizer", "ray-optimizer", "logs"]
usdc-optimizer = []
usdt-optimizer = []
sol-optimizer = []
ray-optimizer = []
logs = []