[package]
name = "tulipv2-sdk-common"
version = "0.9.18"
edition = "2021"
authors = ["Tulip Protocol"]
description = "common types, traits, and helper functions used by the v2 sdk"
keywords = ["solana", "anchor", "tulip-protocol"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/tulipv2-sdk-common"
readme = "../README.md"

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = "3.2.0"
tulip-arrform = "0.1.1"
uint = "0.8"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
static-pubkey = "1.0.2"
tulipv2-sdk-farms = {path = "../farms", version = "0.9.17"}
arrayref = "0.3.6"
bytemuck = "1.7.2"
solana-program = "1.9.13"
so-defi-utils = "0.1.0"
spl-associated-token-account = "1.0.3"
sighashdb = "0.1.28"
[dev-dependencies]
anchor-client = "0.24.2"

[features]
default = [
    "usdc-optimizer", 
    "usdt-optimizer", 
    "sol-optimizer", 
    "ray-optimizer", 
    "levfarm", 
    "orca-orcausdc-levfarm",
    "orca-solusdc-levfarm",
    "orca-gmtusdc-levfarm",
    "orca-solusdt-levfarm",
    "orca-shdwusdc-levfarm",
    "orca-atlasusdc-levfarm",
    "orca-orcasol-levfarm",
    "orca-polisusdc-levfarm",
    "orca-samousdc-levfarm",
    "orca-basisusdc-levfarm",
    "orca-whethusdc-levfarm",
    "orca-stsolusdc-levfarm",
    "orca-whethsol-levfarm",
    "orca-gstusdc-levfarm",
    "orca-shdwsol-levfarm",
    "ray-rayusdc-levfarm",
    "ray-solusdcray-levfarm",
    "ray-solusdt-levfarm",
    "ray-geneusdc-levfarm",
    "ray-raysol-levfarm",
    "ray-generay-levfarm",
    "ray-walephusdc-levfarm",
    "ray-dflusdc-levfarm",
    "ray-samoray-levfarm",
    "ray-whethsol-levfarm",
    "ray-raywheth-levfarm",
    "ray-rayusdt-levfarm",
    "ray-stsolusdc-levfarm",
    "ray-msolusdc-levfarm",
    "ray-atlasray-levfarm",
    "ray-stsolusdt-levfarm",
    "ray-whethusdc-levfarm",
    "ray-rayeth-levfarm",
    "ray-polisray-levfarm",
    "ray-likeusdc-levfarm",
    "ray-realusdc-levfarm",
    "ray-mbsusdc-levfarm",
    "ray-ethstsol-levfarm",
    "ray-slclusdc-levfarm",
    "ray-btcstsol-levfarm",
    "ray-msolusdt-levfarm",
    "ray-starsusdc-levfarm",
    "ray-prismusdc-levfarm",
]
usdc-optimizer = []
usdt-optimizer = []
sol-optimizer = []
ray-optimizer = []
logs = []
levfarm = []
orca-orcausdc-levfarm = []
orca-solusdc-levfarm = []
orca-gmtusdc-levfarm = []
orca-solusdt-levfarm = []
orca-shdwusdc-levfarm = []
orca-atlasusdc-levfarm = []
orca-orcasol-levfarm = []
orca-polisusdc-levfarm = []
orca-samousdc-levfarm = []
orca-basisusdc-levfarm = []
orca-whethusdc-levfarm = []
orca-stsolusdc-levfarm = []
orca-whethsol-levfarm = []
orca-gstusdc-levfarm = []
orca-shdwsol-levfarm = []
ray-rayusdc-levfarm = []
ray-solusdcray-levfarm = []
ray-solusdt-levfarm = []
ray-geneusdc-levfarm = []
ray-raysol-levfarm = []
ray-generay-levfarm = []
ray-walephusdc-levfarm = []
ray-dflusdc-levfarm = []
ray-samoray-levfarm = []
ray-whethsol-levfarm = []
ray-raysrm-levafrm = []
ray-raywheth-levfarm = []
ray-rayusdt-levfarm = []
ray-stsolusdc-levfarm = []
ray-msolusdc-levfarm = []
ray-atlasray-levfarm = []
ray-stsolusdt-levfarm = []
ray-whethusdc-levfarm = []
ray-rayeth-levfarm = []
ray-polisray-levfarm = []
ray-likeusdc-levfarm = []
ray-realusdc-levfarm = []
ray-mbsusdc-levfarm = []
ray-ethstsol-levfarm = []
ray-slclusdc-levfarm = []
ray-btcstsol-levfarm = []
ray-msolusdt-levfarm = []
ray-starsusdc-levfarm = []
ray-prismusdc-levfarm = []