[package]
name = "tulipv2-sdk-farms"
version = "0.9.0"
edition = "2021"
authors = ["Tulip Protocol"]
description = "farm identifiers and farm names used by the v2 sdk"
keywords = ["solana", "anchor", "tulip-protocol"]

[dependencies]
anchor-lang = "0.22.0"
arrform = {git = "https://github.com/sol-farm/arrform.git", rev = "fdbb0cfe18eadbff99cc8cd63f1b5a43df70e665"}
