[package]
name = "tulipv2-sdk-farms"
version = "0.9.0"
edition = "2021"
authors = ["Tulip Protocol"]
description = "farm identifiers and farm names used by the v2 sdk"
keywords = ["solana", "anchor", "tulip-protocol"]
license = "MIT/Apache-2.0"

[dependencies]
anchor-lang = "0.22.0"
tulip-arrform = "0.1.1"
