[package]
name = "tulipv2-sdk-lending"
version = "0.9.12"
edition = "2021"
authors = ["Tulip Protocol"]
description = "lending instructions for v1 lending"
keywords = ["solana", "anchor", "tulip-protocol"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/tulipv2-sdk-vaults"
readme = "../README.md"

[dependencies]
solana-program = "1.9.13"
spl-token = "3.2.0"
tulipv2-sdk-common = {path = "../common", version = "0.9.12"}
itertools = "0.10.3"
num-derive = "0.3"
thiserror = "1.0"
num-traits = "0.2"
[dev-dependencies]
proptest = "1.0.0"
solana-client = "1.9.13"
data-encoding = "2.3.2"
ring = "0.16.20"
type-layout = "0.2.0"