[package]
name = "tulipv2-sdk-leveraged"
version = "0.9.17"
edition = "2021"
authors = ["Tulip Protocol"]
description = "lending instructions for v1 leveraged yield farming"
keywords = ["solana", "anchor", "tulip-protocol"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/tulipv2-sdk-vaults"
readme = "../README.md"

[dependencies]
solana-program = "1.9.13"
spl-token = "3.2.0"
tulipv2-sdk-common = {path = "../common", version = "0.9.17"}
itertools = "0.10.3"
num-derive = "0.3"
thiserror = "1.0"
num-traits = "0.2"
anchor-lang = "0.24.2"
static-pubkey = "1.0.2"
sighashdb = "0.1.28"
[dev-dependencies]
proptest = "1.0.0"
solana-client = "1.9.13"
data-encoding = "2.3.2"
ring = "0.16.20"
type-layout = "0.2.0"