[package]
name = "tulipv2-sdk-vaults"
version = "0.9.0"
edition = "2021"
authors = ["Tulip Protocol"]
description = "vault account types, and vault instructions used by the v2 sdk"
keywords = ["solana", "anchor", "tulip-protocol"]

[features]
default = ["production"]
# activate staging features where applicable
staging = []
production = []
localnet = []
[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
spl-token = "3.2.0"
tulipv2-sdk-common = {path = "../common"}
spl-associated-token-account = "1.0.3"
static-pubkey = "1.0.2"
type-layout = "0.2.0"
tulip-arrform = "0.1.1"
derivative = {git = "https://github.com/sol-farm/rust-derivative.git", rev = "ff66e36f57d14c0a910e77d6e7f4d3dae307de7e"}
itertools = "0.10.3"
tulipv2-sdk-farms = {path = "../farms" }
[dev-dependencies]
proptest = "1.0.0"
solana-client = "1.9.1"
data-encoding = "2.3.2"
ring = "0.16.20"
type-layout = "0.2.0"